GET and POST routes working for userRoutes

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MVC Tech Blog</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/jass.css">
 </head>
 
 <body>
@@ -12,10 +14,12 @@
         <h1>MVC Tech Blog</h1>
         <nav>
             <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/dashboard">Dashboard</a></li>
-                <li><a href="/login">Login</a></li>
-                <li><a href="/signup">Sign Up</a></li>
+                {{#if logged_in}}
+                <a href="/profile">profile</a> |
+                <button class="no-button" id="logout">logout</button>
+                {{else}}
+                <a href="/login">login</a>
+                {{/if}}
             </ul>
         </nav>
     </header>
@@ -27,6 +31,7 @@
     <footer>
         <p>2021 MVC Tech Blog</p>
     </footer>
-    
+
 </body>
+
 </html>
